adding vad and enhancing window algorithm

--- a/ai_service/.env.example
+++ b/ai_service/.env.example
@@ -49,3 +49,24 @@ WHISPER_STREAMING_MODEL=base  # Lighter model for real-time
 WHISPER_BATCH_MODEL=large-v3  # Full model for batch processing
 
 ASTERISK_SERVER_IP=your.ip.address
+
+# Asterisk TCP Server Configuration (Whisper Hallucination Fixes)
+ENABLE_ASTERISK_TCP=true
+ASTERISK_WINDOW_DURATION=15.0          # Audio window duration in seconds (15s optimal for Whisper vs original 5s)
+ASTERISK_ENABLE_OVERLAPPING=true       # Enable 25% overlap between windows for better context
+ASTERISK_DEBUG_SAVE_AUDIO=true         # Save debug audio chunks for analysis
+ASTERISK_ENABLE_VAD=true               # Enable Voice Activity Detection preprocessing
+ASTERISK_ENABLE_AUTO_LANGUAGE=false    # Enable automatic language detection (keep false for Swahili)
+
+# Call Data Logging Configuration
+ENABLE_CALL_DATA_LOGGING=true          # Enable comprehensive per-call data logging
+ENABLE_TCP_PACKET_LOGGING=true         # Log TCP packet details with timing
+CALL_LOGS_DIRECTORY=/tmp/ai_service_logs/calls  # Directory for call logs (will be created)
+
+# Live Audio Streaming Configuration
+ENABLE_LIVE_AUDIO_STREAMING=true       # Enable real-time audio streaming for monitoring
+LIVE_AUDIO_FORMAT=wav                  # Audio format for streaming (wav, mp3, ogg)
+LIVE_AUDIO_SAMPLE_RATE=16000           # Sample rate for streamed audio
+
+# Monitoring Dashboard Configuration
+ENABLE_MONITORING_DASHBOARD=true       # Enable web-based monitoring dashboard at /monitoring
