--- a/helplinev1/docker-compose.yml
+++ b/helplinev1/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   # MySQL Database
   # MySQL Database1
+  # MySQL Database2
   database:
     image: mysql:8.0
     container_name: helpline-db
