--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -1,7 +1,7 @@
 name: AI Service CI/CD
 permissions:
-  contents: write  # Enable writing coverage reports back to repo
-  pull-requests: write  # Enable writing to PR branches
+  contents: write  # Enable writing coverage reports and creating branches
+  pull-requests: write  # Enable creating PRs and writing to PR branches
 
 on:
   push:
@@ -273,11 +273,11 @@ jobs:
           echo "✅ Coverage report generated successfully"
           echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
 
-      - name: 💾 Commit COVERAGE.md for Push Events
+      - name: 💾 Create Branch and Commit COVERAGE.md for Push Events
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
         working-directory: ai_service
         run: |
-          echo "💾 Committing coverage report for push event..."
+          echo "💾 Creating branch and committing coverage report for push event..."
           
           # Configure git
           git config --local user.name "github-actions[bot]"
@@ -289,16 +289,20 @@ jobs:
             exit 0
           fi
           
+          # Create a new branch for the coverage update
+          BRANCH_NAME="update-coverage-$(date +%s)"
+          git checkout -b $BRANCH_NAME
+          
           # Add and commit the file
           git add COVERAGE.md
           git commit -m "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
           
-          # Push with retry logic
+          # Push the new branch with retry logic
           max_retries=3
           for i in $(seq 1 $max_retries); do
-            if git push origin HEAD; then
-              echo "✅ Successfully pushed coverage report"
-              echo "📎 Coverage report available at: https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md"
+            if git push origin $BRANCH_NAME; then
+              echo "✅ Successfully pushed coverage report to branch $BRANCH_NAME"
+              echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/$BRANCH_NAME/ai_service/COVERAGE.md" >> $GITHUB_ENV
               break
             else
               echo "⚠️ Push failed, attempt $i/$max_retries"
@@ -307,9 +311,29 @@ jobs:
                 exit 1
               fi
               sleep 5
-              git pull --rebase origin ${{ github.ref_name }}
+              git pull --rebase origin $BRANCH_NAME || true
             fi
           done
+
+      - name: 📬 Create Pull Request for Push Events
+        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
+        uses: peter-evans/create-pull-request@v7
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
+          branch: update-coverage-$(date +%s)
+          base: ${{ github.ref_name }}
+          title: "Update COVERAGE.md - ${COVERAGE_PERCENTAGE:-0}%"
+          body: |
+            Automated update of COVERAGE.md with code coverage report.
+            - Coverage: ${COVERAGE_PERCENTAGE:-0}%
+            - Generated: $(date '+%Y-%m-%d %H:%M:%S UTC')
+            - Workflow: [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            - View report: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ env.COVERAGE_MD_LINK }}/ai_service/COVERAGE.md)
+          labels: automated, coverage
+          delete-branch: true
+        env:
+          COVERAGE_PERCENTAGE: ${{ env.COVERAGE_PERCENTAGE }}
 
       - name: 💾 Commit COVERAGE.md for Pull Request Events
         if: github.event_name == 'pull_request' && matrix.python-version == '3.12'
@@ -336,7 +360,6 @@ jobs:
           for i in $(seq 1 $max_retries); do
             if git push origin HEAD:${{ github.event.pull_request.head.ref }}; then
               echo "✅ Successfully pushed coverage report to PR branch ${{ github.event.pull_request.head.ref }}"
-              echo "📎 Coverage report available at: https://github.com/${{ github.repository }}/blob/${{ github.event.pull_request.head.ref }}/ai_service/COVERAGE.md"
               echo "COVERAGE_MD_PR_LINK=https://github.com/${{ github.repository }}/blob/${{ github.event.pull_request.head.ref }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
               break
             else
@@ -413,7 +436,7 @@ jobs:
           echo "### 📊 Coverage Reports" >> $GITHUB_STEP_SUMMARY
           echo "- Coverage reports have been generated and uploaded as artifacts" >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.event_name }}" == "push" ]; then
-            echo "- Markdown coverage report committed to repository (main/develop branches)" >> $GITHUB_STEP_SUMMARY
+            echo "- Markdown coverage report committed to a new branch and PR created" >> $GITHUB_STEP_SUMMARY
             echo "- Access the coverage report at: [COVERAGE.md](${{ env.COVERAGE_MD_LINK }})" >> $GITHUB_STEP_SUMMARY
           else
             echo "- Markdown coverage report committed to PR branch" >> $GITHUB_STEP_SUMMARY
