ai-service yml2

--- a/.github/workflows/ai_service/ci-cd.yml
+++ b/.github/workflows/ai_service/ci-cd.yml
@@ -489,7 +489,7 @@ jobs:
           echo "🎉 Production deployment successful!"
           # Send success notification
 
-  # Cleanup and Reporting
+  # Cleanup and Reporting end
   cleanup:
     name: Cleanup & Reporting
     runs-on: ubuntu-latest
