--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -186,42 +186,54 @@ jobs:
             EOF
           fi
 
-      - name: 📊 Generate Coverage Report
-        working-directory: ai_service
-        run: |
-          if [ -f coverage.xml ] && [ -s coverage.xml ]; then
-            # Try to get coverage percentage
-            if command -v coverage >/dev/null; then
-              coverage report --show-missing 2>/dev/null || true
-              COVERAGE=$(coverage report --format=total 2>/dev/null || echo "0")
-              # Also save detailed report to file for markdown generation
-              coverage report --show-missing > coverage.txt 2>/dev/null || echo "No coverage data" > coverage.txt
-            else
-              # Fallback to parsing XML
-              COVERAGE=$(grep -o 'line-rate="[0-1].[0-9]*"' coverage.xml | head -1 | sed 's/line-rate="//;s/"//' | awk '{print int($1*100)}' || echo "0")
-              echo "Coverage data parsed from XML: ${COVERAGE}%" > coverage.txt
-            fi
-            
-            echo "COVERAGE_PERCENTAGE=$COVERAGE" >> $GITHUB_ENV
-            echo "📊 Detected Coverage: ${COVERAGE}%"
-            
-            # Create coverage badge data
-            if [ "$COVERAGE" -ge "80" ]; then
-              COLOR="brightgreen"
-            elif [ "$COVERAGE" -ge "60" ]; then
-              COLOR="yellow"
-            elif [ "$COVERAGE" -ge "40" ]; then
-              COLOR="orange"
-            else
-              COLOR="red"
-            fi
-            echo "COVERAGE_COLOR=$COLOR" >> $GITHUB_ENV
-          else
-            echo "COVERAGE_PERCENTAGE=0" >> $GITHUB_ENV
-            echo "COVERAGE_COLOR=red" >> $GITHUB_ENV
-            echo "⚠️ No coverage data available"
-            echo "No coverage data available" > coverage.txt
-          fi
+      - name: 📝 Generate COVERAGE.md
+  working-directory: ai_service
+  run: |
+    echo "📝 Generating coverage report in ai_service folder..."
+    
+    # Generate detailed coverage report content
+    if [ -f coverage.txt ]; then
+      echo "Using existing coverage.txt..." >&2
+      COVERAGE_DETAILS=$(cat coverage.txt)
+    elif command -v coverage >/dev/null && [ -f .coverage ]; then
+      echo "Generating coverage report from .coverage file..." >&2
+      COVERAGE_DETAILS=$(coverage report --show-missing 2>/dev/null || echo "Unable to generate detailed coverage report")
+    else
+      COVERAGE_DETAILS="No detailed coverage data available"
+    fi
+    
+    # Create coverage report with heredoc
+    cat > COVERAGE.md <<'EOF'
+    # 📊 Code Coverage Report - AI Service
+    
+    **Branch:** ${{ github.ref_name }}
+    **Commit:** [`${GITHUB_SHA:0:7}`](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
+    **Generated:** $(date '+%Y-%m-%d %H:%M:%S UTC')
+    **Python Version:** ${{ matrix.python-version }}
+    **Workflow:** [`${{ github.run_id }}`](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+    
+    ## 🎯 Coverage Summary
+    
+    ![Coverage](https://img.shields.io/badge/Coverage-${COVERAGE_PERCENTAGE:-0}%25-${COVERAGE_COLOR:-red})
+    
+    | Metric | Value | Status |
+    |--------|-------|--------|
+    | **Coverage** | ${COVERAGE_PERCENTAGE:-0}% | $([ "${COVERAGE_PERCENTAGE:-0}" -ge 80 ] && echo "✅ Pass" || echo "❌ Fail") |
+    | **Threshold** | 80% | Target |
+    
+    ## 📈 Detailed Coverage Report
+    
+    ```
+    ${COVERAGE_DETAILS}
+    ```
+    
+    ---
+    *Report generated automatically by GitHub Actions*
+    *Access this report at: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md)*
+    EOF
+    
+    echo "✅ Coverage report generated successfully"
+    echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
 
       - name: 📝 Generate COVERAGE.md
         working-directory: ai_service
