--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -1,18 +1,16 @@
 name: AI Service CI/CD
 permissions:
-  contents: write  # Enable writing coverage reports and creating branches
-  pull-requests: write  # Enable creating PRs and writing to PR branches
+  contents: write  # Enable writing coverage reports back to repo
+  pull-requests: write  # Enable writing to PR branches
 
 on:
   push:
     paths:
       - 'ai_service/**'  # Trigger on any file in ai_service folder
-      - '.github/workflows/ai-service-ci.yml'  # Trigger on workflow file changes
     branches: [main, develop]
   pull_request:
     paths:
       - 'ai_service/**'  # Trigger on any file in ai_service folder
-      - '.github/workflows/ai-service-ci.yml'  # Trigger on workflow file changes
     branches: [main, develop]
   workflow_dispatch:
 
@@ -83,7 +81,7 @@ jobs:
           mkdir -p app/models models logs temp
           
           # Create model loader placeholder
-          cat > app/models/__init__.py <<'EOF'
+          cat > app/models/_init_.py <<'EOF'
           """Models package placeholder for testing"""
           EOF
           
@@ -91,10 +89,10 @@ jobs:
           """Model loader placeholder for CI testing"""
           import logging
           
-          logger = logging.getLogger(__name__)
+          logger = logging.getLogger(_name_)
           
           class ModelLoader:
-              def __init__(self):
+              def _init_(self):
                   self.models = {}
                   logger.info("ModelLoader initialized (CI mode)")
               
@@ -198,7 +196,7 @@ jobs:
               coverage report --show-missing > coverage.txt 2>/dev/null || echo "No coverage data" > coverage.txt
             else
               # Fallback to parsing XML
-              COVERAGE=$(grep -o 'line-rate="[0-1].[0-9]*"' coverage.xml | head -1 | sed 's/line-rate="//;s/"//' | awk '{print int($1*100)}' || echo "0")
+              COVERAGE=$(grep -o 'line-rate="[0-9.]*"' coverage.xml | head -1 | sed 's/line-rate="//;s/"//' | awk '{print int($1*100)}' || echo "0")
               echo "Coverage data parsed from XML: ${COVERAGE}%" > coverage.txt
             fi
             
@@ -228,26 +226,15 @@ jobs:
         run: |
           echo "📝 Generating coverage report in ai_service folder..."
           
-          # Generate detailed coverage report content
-          if [ -f coverage.txt ]; then
-            echo "Using existing coverage.txt..." >&2
-            COVERAGE_DETAILS=$(cat coverage.txt)
-          elif command -v coverage >/dev/null && [ -f .coverage ]; then
-            echo "Generating coverage report from .coverage file..." >&2
-            COVERAGE_DETAILS=$(coverage report --show-missing 2>/dev/null || echo "Unable to generate detailed coverage report")
-          else
-            COVERAGE_DETAILS="No detailed coverage data available"
-          fi
-          
-          # Create coverage report with heredoc
-          cat > COVERAGE.md <<'EOF'
+          # Create coverage report with timestamp
+          cat > COVERAGE.md <<EOF
           # 📊 Code Coverage Report - AI Service
           
-          **Branch:** ${{ github.ref_name }}
-          **Commit:** [`${GITHUB_SHA:0:7}`](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
-          **Generated:** $(date '+%Y-%m-%d %H:%M:%S UTC')
-          **Python Version:** ${{ matrix.python-version }}
-          **Workflow:** [`${{ github.run_id }}`](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
+          *Branch:* ${{ github.ref_name }}  
+          *Commit:* [\⁠ ${GITHUB_SHA:0:7}\ ⁠](https://github.com/${{ github.repository }}/commit/${{ github.sha }})  
+          *Generated:* $(date '+%Y-%m-%d %H:%M:%S UTC')  
+          *Python Version:* ${{ matrix.python-version }}  
+          *Workflow:* [\⁠ ${{ github.run_id }}\ ⁠](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           
           ## 🎯 Coverage Summary
           
@@ -255,43 +242,63 @@ jobs:
           
           | Metric | Value | Status |
           |--------|-------|--------|
-          | **Coverage** | ${COVERAGE_PERCENTAGE:-0}% | $([ "${COVERAGE_PERCENTAGE:-0}" -ge 80 ] && echo "✅ Pass" || echo "❌ Fail") |
-          | **Threshold** | 80% | Target |
+          | *Coverage* | ${COVERAGE_PERCENTAGE:-0}% | $([ "${COVERAGE_PERCENTAGE:-0}" -ge 80 ] && echo "✅ Pass" || echo "❌ Fail") |
+          | *Threshold* | 80% | Target |
           
-          ## 📈 Detailed Coverage Report
-          
-          ```
-          ${COVERAGE_DETAILS}
-          ```
-          
-          ---
-          *Report generated automatically by GitHub Actions*
-          *Access this report at: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md)*
           EOF
+          
+          # Add detailed coverage report
+          echo "## 📈 Detailed Coverage Report" >> COVERAGE.md
+          echo "" >> COVERAGE.md
+          echo "\⁠ \ ⁠\`" >> COVERAGE.md
+          
+          if [ -f coverage.txt ]; then
+            echo "Using existing coverage.txt..." >&2
+            cat coverage.txt >> COVERAGE.md
+          elif command -v coverage >/dev/null && [ -f .coverage ]; then
+            echo "Generating coverage report from .coverage file..." >&2
+            coverage report --show-missing >> COVERAGE.md 2>/dev/null || echo "Unable to generate detailed coverage report" >> COVERAGE.md
+          else
+            echo "No detailed coverage data available" >> COVERAGE.md
+          fi
+          
+          echo "\⁠ \ ⁠\`" >> COVERAGE.md
+          echo "" >> COVERAGE.md
+          
+          # Add footer with link to the file
+          echo "---" >> COVERAGE.md
+          echo "Report generated automatically by GitHub Actions" >> COVERAGE.md
+          echo "Access this report at: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md)" >> COVERAGE.md
           
           echo "✅ Coverage report generated successfully"
           echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
 
-      - name: 💾 Create Branch and Commit COVERAGE.md for Push Events
+      - name: 💾 Commit COVERAGE.md for Push Events
         if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
         working-directory: ai_service
         run: |
-          echo "💾 Creating branch and committing coverage report for push event..."
+          echo "💾 Committing coverage report for push event..."
+          
+          # Configure git
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Check if there are any changes
           if git diff --quiet COVERAGE.md 2>/dev/null; then
             echo "📝 No changes to COVERAGE.md, skipping commit"
             exit 0
           fi
-          BRANCH_NAME="update-coverage-$(date +%s)"
-          git checkout -b $BRANCH_NAME
+          
+          # Add and commit the file
           git add COVERAGE.md
           git commit -m "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
+          
+          # Push with retry logic
           max_retries=3
           for i in $(seq 1 $max_retries); do
-            if git push origin $BRANCH_NAME; then
-              echo "✅ Successfully pushed coverage report to branch $BRANCH_NAME"
-              echo "COVERAGE_MD_LINK=https://github.com/${{ github.repository }}/blob/$BRANCH_NAME/ai_service/COVERAGE.md" >> $GITHUB_ENV
+            if git push origin HEAD; then
+              echo "✅ Successfully pushed coverage report"
+              echo "📎 Coverage report available at: https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/ai_service/COVERAGE.md"
               break
             else
               echo "⚠️ Push failed, attempt $i/$max_retries"
@@ -300,47 +307,36 @@ jobs:
                 exit 1
               fi
               sleep 5
-              git pull --rebase origin $BRANCH_NAME || true
+              git pull --rebase origin ${{ github.ref_name }}
             fi
           done
-
-      - name: 📬 Create Pull Request for Push Events
-        if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop') && matrix.python-version == '3.12'
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "📊 Update coverage report - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
-          branch: update-coverage-$(date +%s)
-          base: ${{ github.ref_name }}
-          title: "Update COVERAGE.md - ${COVERAGE_PERCENTAGE:-0}%"
-          body: |
-            Automated update of COVERAGE.md with code coverage report.
-            - Coverage: ${COVERAGE_PERCENTAGE:-0}%
-            - Generated: $(date '+%Y-%m-%d %H:%M:%S UTC')
-            - Workflow: [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
-            - View report: [COVERAGE.md](https://github.com/${{ github.repository }}/blob/${{ env.COVERAGE_MD_LINK }}/ai_service/COVERAGE.md)
-          labels: automated, coverage
-          delete-branch: true
-        env:
-          COVERAGE_PERCENTAGE: ${{ env.COVERAGE_PERCENTAGE }}
 
       - name: 💾 Commit COVERAGE.md for Pull Request Events
         if: github.event_name == 'pull_request' && matrix.python-version == '3.12'
         working-directory: ai_service
         run: |
           echo "💾 Committing coverage report for pull request..."
+          
+          # Configure git
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Check if there are any changes
           if git diff --quiet COVERAGE.md 2>/dev/null; then
             echo "📝 No changes to COVERAGE.md, skipping commit"
             exit 0
           fi
+          
+          # Add and commit the file
           git add COVERAGE.md
           git commit -m "📊 Update coverage report for PR - ${COVERAGE_PERCENTAGE:-0}% [skip ci]"
+          
+          # Push to the PR's head branch
           max_retries=3
           for i in $(seq 1 $max_retries); do
             if git push origin HEAD:${{ github.event.pull_request.head.ref }}; then
               echo "✅ Successfully pushed coverage report to PR branch ${{ github.event.pull_request.head.ref }}"
+              echo "📎 Coverage report available at: https://github.com/${{ github.repository }}/blob/${{ github.event.pull_request.head.ref }}/ai_service/COVERAGE.md"
               echo "COVERAGE_MD_PR_LINK=https://github.com/${{ github.repository }}/blob/${{ github.event.pull_request.head.ref }}/ai_service/COVERAGE.md" >> $GITHUB_ENV
               break
             else
@@ -404,6 +400,7 @@ jobs:
           echo "### ✅ Completed Jobs:" >> $GITHUB_STEP_SUMMARY
           echo "- Unit Tests: ${{ needs.unit-tests.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
+          
           if [ "${{ needs.unit-tests.result }}" == "success" ]; then
             echo "### 🎉 All tests passed successfully!" >> $GITHUB_STEP_SUMMARY
             echo "The AI Service is ready for deployment." >> $GITHUB_STEP_SUMMARY
@@ -411,11 +408,12 @@ jobs:
             echo "### ⚠️ Some tests failed" >> $GITHUB_STEP_SUMMARY
             echo "Please check the logs and fix any issues." >> $GITHUB_STEP_SUMMARY
           fi
+          
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 📊 Coverage Reports" >> $GITHUB_STEP_SUMMARY
           echo "- Coverage reports have been generated and uploaded as artifacts" >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.event_name }}" == "push" ]; then
-            echo "- Markdown coverage report committed to a new branch and PR created" >> $GITHUB_STEP_SUMMARY
+            echo "- Markdown coverage report committed to repository (main/develop branches)" >> $GITHUB_STEP_SUMMARY
             echo "- Access the coverage report at: [COVERAGE.md](${{ env.COVERAGE_MD_LINK }})" >> $GITHUB_STEP_SUMMARY
           else
             echo "- Markdown coverage report committed to PR branch" >> $GITHUB_STEP_SUMMARY
