--- a/.github/workflows/ai-service-ci.yml
+++ b/.github/workflows/ai-service-ci.yml
@@ -7,7 +7,7 @@ on:
   push:
     paths:
       - 'ai_service/**'  # Trigger on any file in ai_service folder
-      - '.github/workflows/ai-service-ci.yml'  # Trigger on workflow file changes
+      - '.github/workflows/ai-service-ci.yml'  # Trigger on workflow file changes this is notWORKING 
     branches: [main, develop]
   pull_request:
     paths:
